sas-core/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>An individual real world flight. E.g. flight record SK712-20201222-ARN-HEL is the flight which departed 14:05 from Stockholm Arlanda to Helsinki-Vantaa on 22.12.2020.</description>
    <label>Flight</label>
    <nameField>
        <label>Flight ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>