sas-core/main/default/objects/Flight__c/fields/Actual_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Time__c</fullName>
    <label>Actual Arrival Time</label>
    <type>DateTime</type>
</CustomField>