sas-core/main/default/objects/Flight__c/fields/Actual_Arrival_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Time_Local__c</fullName>
    <label>Actual Arrival Time Local</label>
    <length>30</length>
    <type>Text</type>
</CustomField>