sas-core/main/default/objects/Flight__c/fields/Actual_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Time__c</fullName>
    <label>Actual Departure Time</label>
    <type>DateTime</type>
</CustomField>