sas-core/main/default/objects/Flight__c/fields/Actual_Departure_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Time_Local__c</fullName>
    <label>Actual Departure Time Local</label>
    <length>30</length>
    <type>Text</type>
</CustomField>