sas-core/main/default/objects/Flight__c/fields/Aircraft_Registration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Registration__c</fullName>
    <description>Flight Registration for the Aircraft used for this flight</description>
    <label>Aircraft Registration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>