sas-core/main/default/objects/Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>