sas-core/main/default/objects/Flight__c/fields/Arrival_Delayed_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Delayed_Minutes__c</fullName>
    <label>Arrival Delayed Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>