sas-core/main/default/objects/Flight__c/fields/Arrival_Gate__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Gate__c</fullName>
    <label>Arrival Gate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>