sas-core/main/default/objects/Flight__c/fields/Arrival_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Terminal__c</fullName>
    <label>Arrival Terminal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>