sas-core/main/default/objects/Flight__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <label>Departure Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>