sas-core/main/default/objects/Flight__c/fields/Departure_Delayed_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Departure_Delayed_Minutes__c</fullName>
    <label>Departure Delayed Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>