sas-core/main/default/objects/Flight__c/fields/Departure_Gate__c.field-meta.xml
<CustomField>
    <fullName>Departure_Gate__c</fullName>
    <label>Departure Gate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>