sas-core/main/default/objects/Flight__c/fields/Departure_Status__c.field-meta.xml
<CustomField>
    <fullName>Departure_Status__c</fullName>
    <defaultValue>&quot;unknown&quot;</defaultValue>
    <label>Departure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ontime</fullName>
            </value>
            <value>
                <fullName>delayed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>