sas-core/main/default/objects/Flight__c/fields/Departure_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Departure_Terminal__c</fullName>
    <label>Departure Terminal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>