sas-core/main/default/objects/Flight__c/fields/Estimated_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival_Time__c</fullName>
    <label>Estimated Arrival Time</label>
    <type>DateTime</type>
</CustomField>