sas-core/main/default/objects/Flight__c/fields/Estimated_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Departure_Time__c</fullName>
    <label>Estimated Departure Time</label>
    <type>DateTime</type>
</CustomField>