sas-core/main/default/objects/Flight__c/fields/Estimated_Departure_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Departure_Time_Local__c</fullName>
    <label>Estimated Departure Time Local</label>
    <length>30</length>
    <type>Text</type>
</CustomField>