sas-core/main/default/objects/Flight__c/fields/Operating_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Operating_Carrier__c</fullName>
    <description>Two character IATA airline designator of the flight&apos;s operating carrier.</description>
    <inlineHelpText>Two character IATA airline designator of the flight&apos;s operating carrier.</inlineHelpText>
    <label>Operating Carrier</label>
    <length>2</length>
    <type>Text</type>
</CustomField>