sas-core/main/default/objects/Flight__c/fields/Operational_Control_Center__c.field-meta.xml
<CustomField>
    <fullName>Operational_Control_Center__c</fullName>
    <label>Operational Control Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>