sas-core/main/default/objects/Flight__c/fields/Scheduled_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Time__c</fullName>
    <label>Scheduled Arrival Time</label>
    <type>DateTime</type>
</CustomField>