sas-core/main/default/objects/Flight__c/fields/Scheduled_Arrival_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Time_Local__c</fullName>
    <label>Scheduled Arrival Time Local</label>
    <length>30</length>
    <type>Text</type>
</CustomField>