sas-core/main/default/objects/Flight__c/fields/Scheduled_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Departure_Time__c</fullName>
    <label>Scheduled Departure Time</label>
    <type>DateTime</type>
</CustomField>